Add OpenSearch hit sorting and pagination
This change implements OpenSearch-compatible top-level hit sorting and 'from' pagination
across the KalDB query path.

Requests now preserve 'sort', 'from', and 'size' from the OpenSearch API. The search request
carries the sort JSON through protobuf transport, workers parse it into internal sort field
specs, Lucene collects sorted hits on each worker node, workers return per-hit sort values,
and the coordinator performs the final distributed merge using the same effective sort order.

The design separates user-requested sort fields from the internal effective sort plan.
Requested sort fields are the fields the user put in the OpenSearch request. Effective sort
fields are the requested fields plus KalDB's stable internal tie breakers: '_timesinceepoch'
descending and '_id' ascending. This makes worker-local Lucene ordering and coordinator-level
merge ordering deterministic even when multiple hits have identical requested sort values.

The internal tie breaker values are carried between nodes because the coordinator needs them
to reproduce the same ordering decision that Lucene made on each worker. They are not exposed
as user-requested sort values in the OpenSearch response. When the user omits 'sort', KalDB
still sorts internally by the stable tie breaker plan, but the response does not include a
synthetic sort array just because internal ordering fields were used.

SearchQuery now owns the parsed sort representation and builds a HitSortPlan from the
requested sort fields. LogIndexSearcherImpl runs on worker nodes and maps the effective sort
fields to Lucene SortField instances. SearchResultHit carries both the returned LogMessage
and the sort values needed for distributed merge. SearchResult protobuf now serializes hit
envelopes containing the message and sort values. SearchResultAggregatorImpl merges already-
sorted worker results using the effective sort plan and applies the final global 'from' and
'size' window at the c